example/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
    name: nginx
spec: 
    replicas: 3
    template: 
        metadata:
            labels: 
                app: nginx
        spec: 
            containers:
            - name: nginx
              image: nginx:1.13
              ports:
              - containerPort: 80
