example/templates/service.yaml
apiVersion: v1
kind: Service
metadata: 
    name: nginx
spec: 
    selector:
        app: nginx
    ports:
      - name: main
        protocol: TCP
        port: 80
        targetPort: 80
