example/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: nginx
    annotations: 
        http.port: "443"
spec: 
    backend: 
        serviceName: nginx
        servicePort: 80
